--- a/src/app/grupos/grupos.component.html
+++ b/src/app/grupos/grupos.component.html
@@ -1,1 +1,11 @@
 <p>grupos works!</p>
+<jqxGrid #myGrid1
+    [width]="getWidth()" [source]="dataAdapter" [columns]="columns"
+    [pageable]="true" [autoheight]="true" [sortable]="true"
+    [rendered]="rendered" [selectionmode]="'singlecell'">
+</jqxGrid>
+<div style="margin-top: 20px"></div>
+<jqxGrid #myGrid2
+    [width]="getWidth()" [source]="source2" [columns]="columns2"
+    [autoheight]="true" [selectionmode]="'singlecell'">
+</jqxGrid>
